<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Kotlin Quiz"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuest1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/question1"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <RadioGroup
        android:id="@+id/groupAns1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuest1">

        <RadioButton
            android:id="@+id/rdQ1Ans1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1_ans1" />

        <RadioButton
            android:id="@+id/rdQ1Ans2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1_ans2" />

        <RadioButton
            android:id="@+id/rdQ1Ans3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1_ans3" />

        <RadioButton
            android:id="@+id/rdQ1Ans4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1_ans4" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvQuest2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/question2"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupAns1" />

    <CheckBox
        android:id="@+id/chkQ2Ans1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2_ans1"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvQuest2" />

    <CheckBox
        android:id="@+id/chkQ2Ans2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2_ans2"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/chkQ2Ans1" />

    <CheckBox
        android:id="@+id/chkQ2Ans3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2_ans3"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/chkQ2Ans2"/>

    <CheckBox
        android:id="@+id/chkQ2Ans4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2_ans4"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/chkQ2Ans3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="Reset" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="Submit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>